--- a/style.css
+++ b/style.css
@@ -191,12 +191,77 @@ ul, li {
   width: 100%;
   margin: 0 auto;
   padding-top: 70px;
+  height: 535px;
 }
 .section-body .pictures_container .pictures {
   width: 1200px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+}
+.section-body .pictures_container .pictures .pictures-info {
+  background: #F1F1F2;
+  height: 165px;
+  position: relative;
+}
+.section-body .pictures_container .pictures .pictures-info .pictures-info_text {
+  font-family: Gilroy, sans-serif;
+  font-size: 20px;
+  font-weight: normal;
+  padding-top: 25px;
+  padding-left: 25px;
+}
+.section-body .pictures_container .pictures .pictures-info .see-more_link {
+  font-size: 14px;
+  font-family: Roboto, sans-serif;
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+}
+.section-body .pictures_container .pictures .picture-info_container:hover {
+  box-shadow: 0 0 10px black;
+}
+.section-body .pictures_container .pictures .picture-info_container:hover .pictures-info {
+  background: white;
+}
+.section-body .get-us_container {
+  width: 100%;
+  height: 240px;
+  margin: 0 auto;
+  background: #F7941E;
+}
+.section-body .get-us_container .get-us {
+  width: 1000px;
+  height: 240px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.section-body .get-us_container .get-us .get-us_title {
+  font-family: Gilroy, sans-serif;
+  font-size: 32px;
+}
+.section-body .get-us_container .get-us .get-us_text {
+  font-family: Gilroy, sans-serif;
+  font-size: 32px;
+  font-weight: normal;
+}
+.section-body .get-us_container .get-us .get-us_btns {
+  display: flex;
+}
+.section-body .get-us_container .get-us .get-us_btns .get-us-find-gift_btn {
+  width: 200px;
+  height: 50px;
+  background: #231F20;
+  border-radius: 5px;
+  font-family: Gilroy, sans-serif;
+  font-size: 18px;
+  color: white;
+  font-weight: lighter;
+}
+.section-body .get-us_container .get-us .get-us_btns .get-us-how-works_btn {
+  width: 200px;
+  height: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
