--- a/style.scss
+++ b/style.scss
@@ -240,6 +240,10 @@ ul, li {
           position: absolute;
           bottom: 25px;
           left: 25px;
+          color: black;
+        }
+        .see-more_link:hover{
+          text-decoration: underline;
         }
       }
       .picture-info_container:hover{
@@ -264,6 +268,7 @@ ul, li {
       margin: 0 auto;
       display: flex;
       justify-content: space-between;
+      align-items: center;
 
       .get-us_title{
         font-family: Gilroy, sans-serif;
@@ -287,15 +292,182 @@ ul, li {
           font-size: 18px;
           color: white;
           font-weight: lighter;
+          margin-right: 15px;
+          border: none;
         }
         .get-us-how-works_btn{
           width: 200px;
           height: 50px;
+          background: #F7941E;
+          border: 1px solid #000000;
+          border-radius: 5px;
+          font-family: Gilroy, sans-serif;
+        }
+      }
+    }
+  }
+
+  .best-blogs_container{
+    width: 1450px;
+    height: 1025px;
+    margin: 0 auto;
+
+    .best-blog_title{
+      width: 700px;
+      margin: 0 auto;
+      text-align: center;
+
+      .best-blog-ever_title{
+        font-size: 32px;
+        font-family: Gilroy, sans-serif;
+        font-weight: normal;
+        padding-top: 90px;
+      }
+      .try-our-blog_title{
+        font-size: 18px;
+        font-family: Gilroy, sans-serif;
+        padding-top: 25px;
+        font-weight: normal;
+      }
+    }
+    .wish_container{
+      width: 1200px;
+      margin: 0 auto;
+      padding-top: 75px;
+      display: flex;
+
+      .wish_block{
+        background: #231F20;
+        width: 800px;
+        height: 370px;
+
+        .name{
+          font-size: 14px;
+          color: #FFFFFF;
+          font-family: Gilroy, sans-serif;
+          font-weight: normal;
+          padding-top: 60px;
+          padding-left: 80px;
+        }
+
+        .wish-title_block{
+          width: 550px;
+
+          .wish_title{
+            font-family: Gilroy, sans-serif;
+            font-weight: normal;
+            font-size: 48px;
+            color: #FFFFFF;
+            padding-top: 30px;
+            padding-left: 80px;
+          }
+        }
+        .wish-read-more{
+          padding-top: 70px;
+
+          .read-more_link{
+            font-size: 18px;
+            font-family: Gilroy, sans-serif;
+            font-weight: normal;
+            color: #FFFFFF;
+            padding-left: 80px;
+          }
+          .read-more_link:hover{
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+    .wish-info_container{
+      width: 1200px;
+      margin: 0 auto;
+      padding-top: 40px;
+      display: flex;
+      justify-content: space-between;
+
+      .database-wishes{
+        width: 570px;
+        height: 270px;
+
+        .database-wishes_block{
+          width: 500px;
+          .database-wishes_title{
+            padding-top: 50px;
+            padding-left: 50px;
+            font-family: Gilroy, sans-serif;
+            font-size: 24px;
+          }
+          .database-wishes_text{
+            font-family: Gilroy, sans-serif;
+            font-size: 18px;
+            padding-top: 20px;
+            padding-left: 50px;
+            font-weight: normal;
+          }
+
+          .database-wishes_link{
+            padding-top: 30px;
+            .database-wishes_read-more{
+              font-size: 14px;
+              font-family: Gilroy, sans-serif;
+              font-weight: normal;
+              color: black;
+              padding-left: 50px;
+            }
+            .database-wishes_read-more:hover{
+              text-decoration: underline;
+            }
+          }
+
+        }
+      }
+      .database-wishes:hover{
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
+      }
+
+      .interesting-info-wishes{
+        width: 570px;
+        height: 270px;
+      }
+      .interesting-info-wishes:hover{
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
+      }
+
+      .interesting-info-wishes_block{
+        width: 530px;
+
+        .interesting-info-wishes_title{
+          padding-top: 50px;
+          padding-left: 50px;
+          font-family: Gilroy, sans-serif;
+          font-size: 24px;
+        }
+
+        .interesting-info-wishes_text{
+          font-family: Gilroy, sans-serif;
+          font-size: 18px;
+          padding-top: 20px;
+          padding-left: 50px;
+          font-weight: normal;
+        }
+        .interesting-info-wishes_link{
+          padding-top: 30px;
+          .interesting-info-wishes_read-more{
+            font-size: 14px;
+            font-family: Gilroy, sans-serif;
+            font-weight: normal;
+            color: black;
+            padding-left: 50px;
+          }
+          .interesting-info-wishes_read-more:hover{
+            text-decoration: underline;
+          }
         }
       }
     }
   }
 }
+
 
 
 
