--- a/style.css
+++ b/style.css
@@ -83,9 +83,10 @@ ul, li {
   margin: 0 auto;
 }
 .section-body .find-gift_container {
-  width: 1450px;
+  max-width: 1450px;
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
 }
 .section-body .find-gift_block {
   width: 50%;
@@ -128,9 +129,10 @@ ul, li {
   width: 100%;
 }
 .section-body .learn-more-gift_container {
-  width: 1450px;
+  max-width: 1450px;
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
 }
 .section-body .learn-more-gift_container .learn-more_photo {
   width: 50%;
@@ -202,6 +204,7 @@ ul, li {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 135px;
+  justify-content: center;
 }
 .section-body .pictures_container .pictures .picture-info_container:not(:first-child) {
   margin-left: 30px;
