--- a/style.scss
+++ b/style.scss
@@ -91,9 +91,10 @@ ul, li {
   margin: 0 auto;
 
   .find-gift_container{
-    width: 1450px;
+    max-width: 1450px;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
   }
   .find-gift_block{
     width: 50%;
@@ -143,9 +144,10 @@ ul, li {
   }
 
   .learn-more-gift_container{
-    width: 1450px;
+    max-width: 1450px;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
 
     .learn-more_photo{
       width: 50%;
@@ -226,6 +228,7 @@ ul, li {
       display: flex;
       flex-wrap: wrap;
       padding-bottom: 135px;
+      justify-content: center;
 
       .picture-info_container:not(:first-child){
         margin-left: 30px;
